--- a/circle/index.html
+++ b/circle/index.html
@@ -234,7 +234,8 @@ title: Math, Sonification, Plots
             // 75%   {rotate(270deg);  left:25%; top:30%; rotate(-270deg);}
             // 100%  {rotate(360deg);  left:50%; top:15%; rotate(-360deg);}
 
-            0%   {-webkit-transform: left(50%) top(15%) rotate(0deg)   translateX(5px) translateY(120px) rotate(0deg)    scale(1);}
+            0%    {left:50%; top:15%;}
+            1%   {-webkit-transform: rotate(0deg)   translateX(5px) translateY(120px) rotate(0deg)    scale(1);}
             25%  {-webkit-transform: rotate(90deg)  translateX(5px) translateY(120px) rotate(-90deg)  scale(.75);}
             50%  {-webkit-transform: rotate(180deg) translateX(5px) translateY(120px) rotate(-180deg) scale(.60);}
             75%  {-webkit-transform: rotate(270deg) translateX(5px) translateY(120px) rotate(-270deg) scale(.75);}
