--- a/circle/index.html
+++ b/circle/index.html
@@ -229,11 +229,11 @@ title: Math, Sonification, Plots
         /* Standard syntax */
         @keyframes tracePlt {
             // 0%    {left:50%; top:15%;}
-            0%   {rotate(0deg);   left:50%; top:12%; rotate(0deg);}
-            25%  {rotate(90deg);  left:80%; top:37%; rotate(-90deg);}
+            0%   {rotate(0deg);   left:50%; top:10%; rotate(0deg);}
+            25%  {rotate(90deg);  left:80%; top:45%; rotate(-90deg);}
             50%  {rotate(180deg); left:50%; top:87%; rotate(-180deg);}
-            75%  {rotate(270deg); left:15%; top:37%; rotate(-270deg);}
-            100% {rotate(360deg); left:50%; top:12%; rotate(-360deg);}
+            75%  {rotate(270deg); left:18%; top:45; rotate(-270deg);}
+            100% {rotate(360deg); left:50%; top:10%; rotate(-360deg);}
 
             //0%   {-webkit-transform: rotate(0deg)   translateX(5px) translateY(120px) rotate(0deg)    scale(1);}
             //25%  {-webkit-transform: rotate(90deg)  translateX(5px) translateY(120px) rotate(-90deg)  scale(.75);}
