--- a/circle/index.html
+++ b/circle/index.html
@@ -226,14 +226,16 @@ title: Math, Sonification, Plots
             90%   {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
             100%  {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
         }
-        /* Standard syntax */
+        /* Standard syntax TEST */
         @keyframes tracePlt {
             // 0%    {left:50%; top:15%;}
-            0%   {rotate(0deg);   left:50%; top:10%; rotate(0deg);}
-            25%  {rotate(90deg);  left:80%; top:45%; rotate(-90deg);}
-            50%  {rotate(180deg); left:50%; top:87%; rotate(-180deg);}
-            75%  {rotate(270deg); left:18%; top:45; rotate(-270deg);}
-            100% {rotate(360deg); left:50%; top:10%; rotate(-360deg);}
+            0%    {rotate(0deg);   left:50%; top:8%; rotate(0deg);}
+            8.33  {rotate(30deg);   left:60%; top:20.33%; rotate(-30deg);}
+            16.67 {rotate(60deg);   left:70%; top:32.67%; rotate(-60deg);}
+            25%   {rotate(90deg);  left:80%; top:45%; rotate(-90deg);}
+            50%  {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
+            75%  {rotate(270deg); left:20%; top:45; rotate(-270deg);}
+            100% {rotate(360deg); left:50%; top:8%; rotate(-360deg);}
 
             //0%   {-webkit-transform: rotate(0deg)   translateX(5px) translateY(120px) rotate(0deg)    scale(1);}
             //25%  {-webkit-transform: rotate(90deg)  translateX(5px) translateY(120px) rotate(-90deg)  scale(.75);}
