--- a/circle/index.html
+++ b/circle/index.html
@@ -230,8 +230,8 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             // 0%    {left:50%; top:15%;}
             0%    {rotate(0deg);   left:50%; top:8%; rotate(0deg);}
-            8.33  {rotate(30deg);   left:60%; top:20.33%; rotate(-30deg);}
-            16.67 {rotate(60deg);   left:70%; top:32.67%; rotate(-60deg);}
+            8.33%  {rotate(30deg);   left:60%; top:20.33%; rotate(-30deg);}
+            16.67% {rotate(60deg);   left:70%; top:32.67%; rotate(-60deg);}
             25%   {rotate(90deg);  left:80%; top:45%; rotate(-90deg);}
             50%  {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
             75%  {rotate(270deg); left:20%; top:45; rotate(-270deg);}
