--- a/circle/index.html
+++ b/circle/index.html
@@ -238,7 +238,12 @@ title: Math, Sonification, Plots
             42% {rotate(180deg); left:71%; top:75%; rotate(-180deg);}
             50% {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
 
-            75%  {rotate(270deg); left:20%; top:45; rotate(-270deg);}
+            58% {rotate(180deg); left:39%; top:75%; rotate(-180deg);}
+            67% {rotate(180deg); left:33%; top:62%; rotate(-180deg);}
+            75% {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
+
+            // 83%  {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
+            // 92%  {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
             100% {rotate(360deg); left:50%; top:8%; rotate(-360deg);}
 
             //0%   {-webkit-transform: rotate(0deg)   translateX(5px) translateY(120px) rotate(0deg)    scale(1);}
