--- a/circle/index.html
+++ b/circle/index.html
@@ -188,69 +188,75 @@ title: Math, Sonification, Plots
 
         /* Safari 4.0 - 8.0 */
         @-webkit-keyframes tracePlt {
-            0%    {left:50%; top:15%;}
-            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);}
-            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg);}
-            30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
-            40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
-            50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
-            60%   {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
-            70%   {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
-            80%   {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
-            90%   {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
-            100%  {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
+            // 0%    {left:50%; top:15%;}
+            0%  {rotate(0deg);  left:50%; top:8%;  rotate(0deg);}
+            8%  {rotate(30deg); left:68%; top:15%; rotate(-30deg);}
+            17% {rotate(60deg); left:77%; top:28%; rotate(-60deg);}
+            25% {rotate(90deg); left:80%; top:45%; rotate(-90deg);}
+            33% {rotate(120deg); left:77%; top:62%; rotate(-120deg);}
+            42% {rotate(150deg); left:71%; top:75%; rotate(-150deg);}
+            50% {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
+            58% {rotate(210deg); left:25%; top:74%; rotate(-210deg);}
+            67% {rotate(240deg); left:22%; top:62%; rotate(-240deg);}
+            75% {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
+            83%  {rotate(300deg); left:24%; top:28%; rotate(-300deg);}
+            92%  {rotate(330deg); left:30%; top:15%; rotate(-330deg);}
+            100% {rotate(360deg); left:50%; top:8%;  rotate(-360deg);}
         }
         @-moz-keyframes tracePlt {
-            0%    {left:50%; top:15%;}
-            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);}
-            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg);}
-            30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
-            40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
-            50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
-            60%   {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
-            70%   {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
-            80%   {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
-            90%   {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
-            100%  {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
+            // 0%    {left:50%; top:15%;}
+            0%  {rotate(0deg);  left:50%; top:8%;  rotate(0deg);}
+            8%  {rotate(30deg); left:68%; top:15%; rotate(-30deg);}
+            17% {rotate(60deg); left:77%; top:28%; rotate(-60deg);}
+            25% {rotate(90deg); left:80%; top:45%; rotate(-90deg);}
+            33% {rotate(120deg); left:77%; top:62%; rotate(-120deg);}
+            42% {rotate(150deg); left:71%; top:75%; rotate(-150deg);}
+            50% {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
+            58% {rotate(210deg); left:25%; top:74%; rotate(-210deg);}
+            67% {rotate(240deg); left:22%; top:62%; rotate(-240deg);}
+            75% {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
+            83%  {rotate(300deg); left:24%; top:28%; rotate(-300deg);}
+            92%  {rotate(330deg); left:30%; top:15%; rotate(-330deg);}
+            100% {rotate(360deg); left:50%; top:8%;  rotate(-360deg);}
         }
         @-o-keyframes tracePlt {
-            0%    {left:50%; top:15%;}
-            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);}
-            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg);}
-            30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
-            40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
-            50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
-            60%   {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
-            70%   {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
-            80%   {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
-            90%   {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
-            100%  {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
+            // 0%    {left:50%; top:15%;}
+            0%  {rotate(0deg);  left:50%; top:8%;  rotate(0deg);}
+            8%  {rotate(30deg); left:68%; top:15%; rotate(-30deg);}
+            17% {rotate(60deg); left:77%; top:28%; rotate(-60deg);}
+            25% {rotate(90deg); left:80%; top:45%; rotate(-90deg);}
+            33% {rotate(120deg); left:77%; top:62%; rotate(-120deg);}
+            42% {rotate(150deg); left:71%; top:75%; rotate(-150deg);}
+            50% {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
+            58% {rotate(210deg); left:25%; top:74%; rotate(-210deg);}
+            67% {rotate(240deg); left:22%; top:62%; rotate(-240deg);}
+            75% {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
+            83%  {rotate(300deg); left:24%; top:28%; rotate(-300deg);}
+            92%  {rotate(330deg); left:30%; top:15%; rotate(-330deg);}
+            100% {rotate(360deg); left:50%; top:8%;  rotate(-360deg);}
         }
         /* Standard syntax */
         @keyframes tracePlt {
             // 0%    {left:50%; top:15%;}
-            //0%  {rotate(0deg);  left:50%; top:8%;  rotate(0deg);}
-            //8%  {rotate(30deg); left:68%; top:15%; rotate(-30deg);}
-            //17% {rotate(60deg); left:77%; top:28%; rotate(-60deg);}
-            //25% {rotate(90deg); left:80%; top:45%; rotate(-90deg);}
+            0%  {rotate(0deg);  left:50%; top:8%;  rotate(0deg);}
+            8%  {rotate(30deg); left:68%; top:15%; rotate(-30deg);}
+            17% {rotate(60deg); left:77%; top:28%; rotate(-60deg);}
+            25% {rotate(90deg); left:80%; top:45%; rotate(-90deg);}
+            33% {rotate(120deg); left:77%; top:62%; rotate(-120deg);}
+            42% {rotate(150deg); left:71%; top:75%; rotate(-150deg);}
+            50% {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
+            58% {rotate(210deg); left:25%; top:74%; rotate(-210deg);}
+            67% {rotate(240deg); left:22%; top:62%; rotate(-240deg);}
+            75% {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
+            83%  {rotate(300deg); left:24%; top:28%; rotate(-300deg);}
+            92%  {rotate(330deg); left:30%; top:15%; rotate(-330deg);}
+            100% {rotate(360deg); left:50%; top:8%;  rotate(-360deg);}
 
-            //33% {rotate(120deg); left:77%; top:62%; rotate(-120deg);}
-            //42% {rotate(150deg); left:71%; top:75%; rotate(-150deg);}
-            //50% {rotate(180deg); left:50%; top:89%; rotate(-180deg);}
-
-            //58% {rotate(210deg); left:25%; top:74%; rotate(-210deg);}
-            //67% {rotate(240deg); left:22%; top:62%; rotate(-240deg);}
-            //75% {rotate(270deg); left:20%; top:45%; rotate(-270deg);}
-
-            //83%  {rotate(300deg); left:24%; top:28%; rotate(-300deg);}
-            //92%  {rotate(330deg); left:30%; top:15%; rotate(-330deg);}
-            //100% {rotate(360deg); left:50%; top:8%;  rotate(-360deg);}
-
-            0%   {-webkit-transform: rotate(0deg)   translateX(50px) translateY(50px) rotate(0deg)    scale(1);}
-            25%  {-webkit-transform: rotate(90deg)  translateX(50px) translateY(50px) rotate(-90deg)  scale(.75);}
-            50%  {-webkit-transform: rotate(180deg) translateX(50px) translateY(50px) rotate(-180deg) scale(.60);}
-            75%  {-webkit-transform: rotate(270deg) translateX(50px) translateY(50px) rotate(-270deg) scale(.75);}
-            100% {-webkit-transform: rotate(360deg) translateX(50px) translateY(50px) rotate(-360deg) scale(1);}
+            // 0%   {-webkit-transform: rotate(0deg)   translateX(5px) translateY(120px) rotate(0deg)    scale(1);}
+            // 25%  {-webkit-transform: rotate(90deg)  translateX(5px) translateY(120px) rotate(-90deg)  scale(.75);}
+            // 50%  {-webkit-transform: rotate(180deg) translateX(5px) translateY(120px) rotate(-180deg) scale(.60);}
+            // 75%  {-webkit-transform: rotate(270deg) translateX(5px) translateY(120px) rotate(-270deg) scale(.75);}
+            // 100% {-webkit-transform: rotate(360deg) translateX(5px) translateY(120px) rotate(-360deg) scale(1);}
         }
 
         /*
