--- a/index.html
+++ b/index.html
@@ -302,13 +302,13 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/hyperbola.mp4"></audio>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <div class="w3-container">
+        <div class="w3-container w3-cell">
             <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
             <br>
             <button class="volDec" onclick="vol_dec()">-</button>
             <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
         </div>
-        <div class="w3-container">
+        <div class="w3-container w3-cell">
             <div><p>
                 !ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
                 information. It is advisable to adjust the volume on your device prior to 
