--- a/index.html
+++ b/index.html
@@ -288,6 +288,14 @@ title: Math, Sonification, Plots
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSc0ICzX_vJjHwATkwU86fbXTqOgTGyMJfLvh73lRyYgIZT9Xg/viewform"
         target="_blank">survey</a>.
     </p></div>
+    <div><p>
+        The results from the survey will augment research for developing better technologies that improve the 
+        user experience for accessing digital media by the visually impaired. The culmination of this project 
+        will be a published 
+        <a href="/AssistiveTechnology_VisuallyImpaired.pdf"
+        target="_blank">paper</a>
+        summarizing the results.
+    </p></div>
 
     <!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
     <div class="center fit myContainer">
@@ -310,13 +318,13 @@ title: Math, Sonification, Plots
                 <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
             </div>
             <div class="w3-container w3-cell">
-                <div><p>
+                <p>
                     !ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
                     information. It is advisable to adjust the volume on your device prior to 
                     playing the sonification for the plots. You can also adjust the volume
                     during play, either from your device, or the volume buttons for this application.
                     Note that the native browser on iPhone does not support volume control from the application.
-                </p></div>
+                </p>
             </div>
         </div>
 
