--- a/index.html
+++ b/index.html
@@ -319,11 +319,7 @@ title: Math, Sonification, Plots
             </div>
             <div class="w3-container w3-cell">
                 <p>
-                    !ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
-                    information. It is advisable to adjust the volume on your device prior to 
-                    playing the sonification for the plots. You can also adjust the volume
-                    during play, either from your device, or the volume buttons for this application.
-                    Note that the native browser on iPhone does not support volume control from the application.
+                    !ALERT!
                 </p>
             </div>
         </div>
