--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/hyperbola.mp4"></audio>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <div class="w3-cell-row">
+        <html><div class="w3-cell-row">
             <div class="w3-container w3-red w3-cell">
                 <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
                 <br>
@@ -326,7 +326,7 @@ title: Math, Sonification, Plots
                     Note that the native browser on iPhone does not support volume control from the application.
                 </p></div>
             </div>
-        </div>
+        </div></html>
 
         <script>
             var playButton = document.getElementById("playButton")
