--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@ title: Math, Sonification, Plots
            autobahn to the visually impaired.
         </p></div>
         <div><p>
-           Another approach to convey information is to utilize a second sensory input.
+           Another approach to convey visual information is to utilize a second sensory input.
            A technology known as sonification shows promise as an assistive technology
            to enhance learning in geometry, which is a completely visual form of mathematics.
            Sonification uses sound: frequency, amplitude and timbre to convey information.
