--- a/index.html
+++ b/index.html
@@ -267,6 +267,18 @@ title: Math, Sonification, Plots
             to   { transform: rotate(360deg) translateX(150px) rotate(-360deg); }
         }
         */
+
+        .floatButton {
+            width:30%;
+            height:400px;
+            float:left;
+        }
+
+        floatWarning {
+            width:70%;
+            height:400px;
+            float:left;
+        }
     </style>
 </head>
 
@@ -294,7 +306,7 @@ title: Math, Sonification, Plots
         will be a published 
         <a href="/AssistiveTechnology_VisuallyImpaired.pdf"
         target="_blank">paper</a>
-        summarizing the results.
+        summarizing the objectives.
     </p></div>
 
     <!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
@@ -310,23 +322,21 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/hyperbola.mp4"></audio>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-        <html><div class="w3-cell-row">
-            <div class="w3-container w3-red w3-cell">
-                <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
-                <br>
-                <button class="volDec" onclick="vol_dec()">-</button>
-                <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
-            </div>
-            <div class="w3-container w3-red w3-cell">
-                <div><p>
-                    !ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
-                    information. It is advisable to adjust the volume on your device prior to 
-                    playing the sonification for the plots. You can also adjust the volume
-                    during play, either from your device, or the volume buttons for this application.
-                    Note that the native browser on iPhone does not support volume control from the application.
-                </p></div>
-            </div>
-        </div></html>
+        <div class="floatButton">
+            <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
+            <br>
+            <button class="volDec" onclick="vol_dec()">-</button>
+            <button class="volInc" onclick="vol_inc()">+ VOLUME</button>
+        </div>
+        <div class="floatWarning">
+            <div><p>
+                !ALERT! Sonification uses sound: frequency, amplitude and timbre to convey 
+                information. It is advisable to adjust the volume on your device prior to 
+                playing the sonification for the plots. You can also adjust the volume
+                during play, either from your device, or the volume buttons for this application.
+                Note that the native browser on iPhone does not support volume control from the application.
+            </p></div>
+        </div>
 
         <script>
             var playButton = document.getElementById("playButton")
