--- a/line/linePosSlope.html
+++ b/line/linePosSlope.html
@@ -140,7 +140,7 @@ title: Math, Sonification, Plots
                 // height: 600px;
                 position: relative;
                 // background: url('https://rbobkoskie3.github.io/images/ST_Circle.png');
-                background-color: blue;
+                // background-color: blue;
                 // background-color: black;
         }
 
