--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ title: Math, Sonification, Plots
             // height: 600px;
             // width:70%;
             // height:400px;
-            float:right;
+            float:left;
             position: relative;
             background-color: red;
         }
