--- a/index.html
+++ b/index.html
@@ -281,15 +281,10 @@ title: Math, Sonification, Plots
         }
 
         floatWarning {
-            width: 20%;
-            height: 100%;
-            // width: 800px;
-            // height: 600px;
-            // width:70%;
-            // height:400px;
-            float:left;
-            position: relative;
-            background-color: red;
+            display: flex;
+            flex-wrap: nowrap;
+            overflow-x: auto;
+            flex: 0 0 auto;
         }
     </style>
 </head>
