--- a/index.html
+++ b/index.html
@@ -268,23 +268,20 @@ title: Math, Sonification, Plots
         }
         */
 
-        .floatButton {
-            width: 10%;
-            height: 100%;
-            // width: 800px;
-            // height: 600px;
-            // width:30%;
-            // height:400px;
-            float:left;
+        div.floatButton {
             position: relative;
-            background-color: red;
+            width: 400px;
+            height: 200px;
+            border: 3px solid #73AD21;
         }
 
-        floatWarning {
-            display: flex;
-            flex-wrap: nowrap;
-            overflow-x: auto;
-            flex: 0 0 auto;
+        div.floatWarning {
+            position: absolute;
+            left: 80px;
+            right: 0;
+            width: 200px;
+            height: 100px;
+            border: 3px solid #73AD21;
         }
     </style>
 </head>
