--- a/index.html
+++ b/index.html
@@ -271,16 +271,16 @@ title: Math, Sonification, Plots
         div.floatButton {
             position: relative;
             width: 400px;
-            height: 200px;
+            height: 100%;
             border: 3px solid #73AD21;
         }
 
         div.floatWarning {
             position: absolute;
-            left: 80px;
+            top: 0;
             right: 0;
-            width: 200px;
-            height: 100px;
+            width: 100%;
+            height: 100%;
             border: 3px solid #73AD21;
         }
     </style>
