--- a/index.html
+++ b/index.html
@@ -269,18 +269,16 @@ title: Math, Sonification, Plots
         */
 
         div.floatButton {
-            position: relative;
-            width: 400px;
+            width: 100%;
             height: 100%;
+            display:inline-block;
             border: 3px solid #73AD21;
         }
 
         div.floatWarning {
-            position: absolute;
-            top: 0;
-            right: 0;
             width: 100%;
             height: 100%;
+            display:inline-block;
             border: 3px solid #73AD21;
         }
     </style>
