--- a/index.html
+++ b/index.html
@@ -269,16 +269,19 @@ title: Math, Sonification, Plots
         */
 
         div.floatButton {
-            width: 30%;
-            height: 100%;
-            display:inline-block;
+            width: 150px;
+            height: 75px;
+            // display:inline-block;
+            float:left;
             border: 3px solid #73AD21;
         }
 
         div.floatWarning {
             width: 100%;
             height: 100%;
-            display:inline-block;
+            left: -10;
+            // display:inline-block;
+            float:left;
             border: 3px solid #73AD21;
         }
     </style>
