--- a/index.html
+++ b/index.html
@@ -270,16 +270,16 @@ title: Math, Sonification, Plots
 
         div.floatButton {
             width: 150px;
-            height: 75px;
+            height: 100%;
             // display:inline-block;
             float:left;
             border: 3px solid #73AD21;
         }
 
         div.floatWarning {
-            width: 100%;
+            width: 50%;
             height: 100%;
-            left: -10;
+            // left: -10;
             // display:inline-block;
             float:left;
             border: 3px solid #73AD21;
