--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ title: Math, Sonification, Plots
         */
 
         div.floatButton {
-            width: 150px;
+            width: 200px;
             height: 100%;
             // display:inline-block;
             float:left;
@@ -277,9 +277,8 @@ title: Math, Sonification, Plots
         }
 
         div.floatWarning {
-            width: 50%;
-            height: 100%;
-            // left: -10;
+            width: 100%;
+            height: 20px;
             // display:inline-block;
             float:left;
             border: 3px solid #73AD21;
