--- a/index.html
+++ b/index.html
@@ -269,6 +269,10 @@ title: Math, Sonification, Plots
         */
 
         div.floatButton {
+            //width:30%;
+            //height:400px;
+            //float:left;
+            
             width: 220px;
             height: 100%;
             // display:inline-block;
@@ -277,8 +281,12 @@ title: Math, Sonification, Plots
         }
 
         div.floatWarning {
+            //width:70%;
+            //height:400px;
+            //float:left;
+            
             width: 70%;
-            height: 50%;
+            height: 400px;
             // display:inline-block;
             float:left;
             border: 3px solid #73AD21;
