--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ title: Math, Sonification, Plots
         }
         */
 
-        div.floatButton {
+        .floatButton {
             //width:30%;
             //height:400px;
             //float:left;
@@ -277,20 +277,20 @@ title: Math, Sonification, Plots
             height: 100%;
             // display:inline-block;
             float:left;
-            //border: 3px solid #73AD21;
+            border: 3px solid #73AD21;
         }
 
-        div.floatWarning {
+        .floatWarning {
             //width:70%;
             //height:400px;
             //float:left;
             overflow-y: scroll;
             
             width: 100%;
-            height: 400px;
+            height: 200px;
             // display:inline-block;
             float:left;
-            //border: 3px solid #73AD21;
+            border: 3px solid #73AD21;
         }
     </style>
 </head>
