--- a/index.html
+++ b/index.html
@@ -285,8 +285,9 @@ title: Math, Sonification, Plots
             //height:400px;
             //float:left;
             overflow-y: scroll;
+            padding: 0px 10px 0px 10px;
             
-            width: 60%;
+            width: 600px;
             height: 200px;
             // display:inline-block;
             float:left;
