--- a/index.html
+++ b/index.html
@@ -287,10 +287,10 @@ title: Math, Sonification, Plots
             overflow-y: scroll;
             padding: 0px 10px 0px 10px;
             
-            width: 600px;
+            width: 70%;
             height: 200px;
             // display:inline-block;
-            float:left;
+            float:right;
             border: 3px solid #73AD21;
         }
     </style>
