--- a/index.html
+++ b/index.html
@@ -284,13 +284,13 @@ title: Math, Sonification, Plots
             //width:70%;
             //height:400px;
             //float:left;
-            overflow-y: scroll;
-            padding: 0px 10px 0px 10px;
             
             width: 70%;
             height: 200px;
-            // display:inline-block;
-            float:right;
+            display:inline-block;
+            //float:left;
+            overflow-y: scroll;
+            padding: 0px 10px 0px 10px;
             border: 3px solid #73AD21;
         }
     </style>
